@@ -132,6 +132,9 @@ ToDo/Notes:
 	  with a 64-bit variable and a int, i.e. 32-bit, constant.  This causes
 	  the higher order 32-bits of the 64-bit variable to be zeroed.  To fix
 	  this cast the 'const' to the same 64-bit type as 'var'.
+	- Change the runlist terminator of the newly allocated cluster(s) to
+	  LCN_ENOENT in ntfs_attr_make_non_resident().  Otherwise the runlist
+	  code gets confused.
 
 2.1.22 - Many bug and race fixes and error handling improvements.
 
